<resources>
    <string name="app_name">ConstraintLayout30032020</string>

    <!--    activity_linearLayout1-->
    <string name="layout_linearText1">A</string>
    <string name="layout_linearText2">B</string>
    <string name="layout_linearText3">C</string>
    <string name="layout_linearText4">D</string>
    <string name="layout_linearText5">A</string>
    <string name="layout_linearText6">B</string>
    <string name="layout_linearText7">C</string>
    <string name="layout_linearText8">D</string>

    <!--    activity_linearLayout2-->
    <string name="layout_linearText9">1</string>
    <string name="layout_linearText10">2</string>
    <string name="layout_linearText11">3</string>
    <string name="layout_linearText12">4</string>
    <string name="layout_linearText13">5</string>

    <!--    activity_linearLayout3-->
    <string name="layout_linearText14">1</string>
    <string name="layout_linearText15">2</string>
    <string name="layout_linearText16">3</string>
    <string name="layout_linearText17">4</string>
    <string name="layout_linearText18">5</string>
    <string name="layout_linearText19">6</string>
    <string name="layout_linearText20">7</string>

    <!--    activity_linearLayout4-->
    <string name="layout_linearText21">1</string>
    <string name="layout_linearText22">2</string>
    <string name="layout_linearText23">3</string>
    <string name="layout_linearText24">4</string>
    <string name="layout_linearText25">5</string>
    <string name="layout_linearText26">6</string>
    <string name="layout_linearText27">7</string>
    <string name="layout_linearText28">8</string>
    <string name="layout_linearText29">9</string>

    <!--    Bài tập 1-->
    <string name="textView1_name">Red</string>
    <string name="textView2_name">Green</string>
    <string name="textView3_name">Blue</string>
    <string name="textView4_name">Orange</string>
    <string name="textView5_name">Gray</string>
    <string name="textView6_name">Pink</string>

    <!--    Bài tập 2-->
    <string name="textView7_name">1</string>
    <string name="textView8_name">2</string>
    <string name="textView9_name">3</string>
    <string name="textView10_name">4</string>
    <string name="textView11_name">5</string>
    <string name="textView12_name">6</string>
    <string name="textView13_name">7</string>

    <!--    Bài tập 3-->
    <string name="textView14_name">Top Content Here</string>
    <string name="textView15_name">First</string>
    <string name="textView16_name">Second</string>
    <string name="textView17_name">Three</string>
    <string name="textView18_name">Bottom Content Here</string>

    <!--    Bài tập 4-->
    <string name="textView19_name">1</string>
    <string name="textView20_name">2</string>
    <string name="textView21_name">3</string>
    <string name="textView22_name">4</string>
    <string name="textView23_name">5</string>
    <string name="textView24_name">6</string>
    <string name="textView25_name">7</string>
    <string name="textView26_name">8</string>
    <string name="textView27_name">9</string>
</resources>
