<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF2301"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView7_name"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textBox2"
        app:layout_constraintEnd_toStartOf="@+id/textBox2" />

    <TextView
        android:id="@+id/textBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2A9543"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView8_name"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textBox3"
        app:layout_constraintEnd_toStartOf="@+id/textBox3" />

    <TextView
        android:id="@+id/textBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#B7AB33"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView9_name"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textBox4"
        app:layout_constraintEnd_toStartOf="@+id/textBox4" />

    <TextView
        android:id="@+id/textBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#97156F"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView10_name"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#8F625C"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView11_name"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/textBox4"
        app:layout_constraintTop_toBottomOf="@+id/textBox4" />

    <TextView
        android:id="@+id/textBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#946A30"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView12_name"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/textBox5"
        app:layout_constraintTop_toBottomOf="@+id/textBox5" />

    <TextView
        android:id="@+id/textBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#47DAAE"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView13_name"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/textBox6"
        app:layout_constraintTop_toBottomOf="@+id/textBox6" />

</androidx.constraintlayout.widget.ConstraintLayout>